--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 .App {
   text-align: center;
+  font-family: 'Lato', sans-serif;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+a:visited {
+  color: inherit;
 }
 
 @media (prefers-reduced-motion: no-preference) {
