--- a/src/styles/SearchBar/SearchBar.module.scss
+++ b/src/styles/SearchBar/SearchBar.module.scss
@@ -1,13 +1,13 @@
 .SearchBar {
-    margin: 0 5em 1em auto;
+    margin: 1em 5em 1em auto;
     display: flex;
 }
 
 .searchBox {
     background: #2f3640;
-    height: 40px;
-    border-radius: 40px;
-    padding: 10px;
+    height: 30px;
+    border-radius: 30px;
+    padding: 5px;
 }
 
 .searchBox:hover > .searchInput {
@@ -23,8 +23,8 @@
 .searchButton {
     color: white;
     float: right;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     background: #2f3640;
     display: flex;
@@ -40,9 +40,9 @@
     float:left;
     padding: 0;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     transition: 0.4s;
-    line-height: 40px;
+    line-height: 30px;
     width: 0px;
 
 }
