Register logic started, working with Axios and API - extra fields required

--- a/src/styles/Card/Card.module.scss
+++ b/src/styles/Card/Card.module.scss
@@ -42,7 +42,7 @@ h1 {
 .card {
     float: left;
     padding: 0.5rem;
-    width: 12em;
+    width: 12rem;
 
     .menu_content {
         @include cf;
