Contexts fix, Login working (persistence still missing)

--- a/src/styles/Articles/Articles.module.scss
+++ b/src/styles/Articles/Articles.module.scss
@@ -16,7 +16,7 @@
     position: relative;
     display: flex;
     margin-bottom: 1rem;
-    width: 100%;
+    width: 90vw;
 
     .body {
         text-align: center;
