About us and footer adjustments with Links

--- a/src/styles/Footer/Footer.module.scss
+++ b/src/styles/Footer/Footer.module.scss
@@ -1,6 +1,13 @@
 /* VARIABLES */
 $dark-blue: #070617;
 
+/* DISABLE A STYLES */
+
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+}
+
 /* STYLES SPECIFIC TO FOOTER  */
 .footer {
     width: 100%;
