--- a/src/styles/Articles/NewArticle.module.scss
+++ b/src/styles/Articles/NewArticle.module.scss
@@ -1,5 +1,15 @@
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .newarticle_container {
-    width: 50%;
+    width: 70%;
     margin: 0 auto;
     padding: 3em;
 
@@ -8,10 +18,80 @@
     }
 
     p {
-        color:aquamarine;
+        color: aquamarine;
     }
 }
 
-.edit_block {
-    background-color: rgb(219, 219, 219);
+.fields {
+    border: 1px solid;
+    padding: 2rem;
+    box-shadow: 5px 10px #888888;
+}
+
+.field_editor {
+    padding: 4rem;
+}
+
+.form__label {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2rem;
+    margin-left: 2rem;
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.3s;
+    transform: translateY(-7.5rem);
+}
+
+.form__input {
+    font-family: 'Roboto', sans-serif;
+    color: #333;
+    font-size: 1.2rem;
+    margin: 2rem auto 0 auto;
+    padding: 1.5rem 2rem;
+    border-radius: 0.2rem;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    width: 90%;
+    display: block;
+    border-bottom: 0.3rem solid transparent;
+    transition: all 0.3s;
+}
+
+.form__input:placeholder-shown+.form__label {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translateY(-4rem);
+    transform: translateY(-4rem);
+}
+
+.button_principal {
+    font-size: 1.2rem;
+    padding: 0.5rem 2rem;
+    margin: 1rem;
+
+    color:rgb(255, 255, 255);
+    background-color: rgb(7, 102, 20);
+
+    transition: 0.3s;
+
+    border-radius: 0.5rem;
+
+    &:hover {
+        opacity: 0.8;
+    }
+}
+
+.button_border {
+    font-size: 1.2rem;
+    padding: 0.5rem 2rem;
+    margin: 1rem;
+
+    transition: 0.3s;
+
+    border: 2px solid;
+    border-radius: 0.5rem;
+
+    &:hover {
+        opacity: 0.6;
+    }
 }
