Navbar nth-child reference - quick fix

--- a/src/styles/Navbar/Navbar.module.scss
+++ b/src/styles/Navbar/Navbar.module.scss
@@ -87,7 +87,7 @@ $dark-blue: #070617;
     margin: 1em 1em;
 }
 
-.partners img:nth-child(2) {
+.partners a:nth-child(2) img {
     max-height: 2.5em;
     width: auto;
     object-fit: cover;
