--- a/src/styles/NextLecture/NextLecture.module.scss
+++ b/src/styles/NextLecture/NextLecture.module.scss
@@ -151,6 +151,7 @@ $accent-color: #355cc9;
 
                 -webkit-text-fill-color: transparent;
                 -webkit-background-clip: text;
+                background-clip: text;
             }
 
             font-size: 1.2em;
